@@ -1,5 +1,8 @@
 package com.anyline.reactnative;
 
+import androidx.annotation.NonNull;
+
+import com.anyline.reactnative.nativeview.AnylineNativeViewManager;
 import com.facebook.react.ReactPackage;
 import com.facebook.react.bridge.JavaScriptModule;
 import com.facebook.react.bridge.NativeModule;
@@ -12,17 +15,24 @@ import java.util.List;
 
 public class AnylinePackage implements ReactPackage {
 
+    private AnylineNativeViewManager viewManager = null;
+
     public List<Class<? extends JavaScriptModule>> createJSModules() {
         return Collections.emptyList();
     }
 
+    @NonNull
     @Override
-    public List<ViewManager> createViewManagers(ReactApplicationContext reactContext) {
-        return Collections.emptyList();
+    public List<ViewManager> createViewManagers(@NonNull ReactApplicationContext reactContext) {
+        if (viewManager == null) {
+            viewManager = new AnylineNativeViewManager();
+        }
+        return List.of(viewManager);
     }
 
+    @NonNull
     @Override
-    public List<NativeModule> createNativeModules(ReactApplicationContext reactContext) {
+    public List<NativeModule> createNativeModules(@NonNull ReactApplicationContext reactContext) {
         List<NativeModule> modules = new ArrayList<>();
         modules.add(new AnylineSDKPlugin(reactContext));
         return modules;
